# png2ppt

./: .gitignore  AGENTS.md  AGENTS.zh-CN.md  README.md  README.zh-CN.md  SKILL.md  SKILL.zh-CN.md  pyproject.toml
agents/: openai.yaml
references/: asset-index.md  fidelity.md  reconstruction-loop.md
scripts/: asset_index.py  images_to_ppt.py  init_job.py  pptx_quality_check.py  regression_compare.py  run_record.py  spec_normalize.py  style_memory.py  style_profile.py  visual_fidelity_audit.py
